@@ -1,10 +1,15 @@
 2000-03-27  Ulrich Drepper  <drepper@redhat.com>
 
+	* stdio-common/tst-obprintf.c (main): Add another check to see
+	obstack_printf handling all possible beginnings of the block
+	inside an obstack chunk.
+
 	* locale/programs/localedef.c: Use __malloc_initialize_hook to
 	install mcheck handler.
 
 	* libio/obprintf.c (_IO_obstack_vprintf): Fix one more memory
 	handling problem.
+
 2000-03-27  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* stdio-common/tmpfile.c: Use <shlib-compat.h> macros.
